[package]
name = "kodegen_utils"
version = "0.4.0"
edition = "2024"
description = "KODEGEN.ᴀɪ: Memory-efficient, Blazing-Fast, MCP tools for code generation agents."
license = "Apache-2.0 OR MIT"
authors = ["KODEGEN.ᴀɪ"]
homepage = "https://kodegen.ai"
repository = "https://github.com/cyrup-ai/kodegen-utils"
readme = "README.md"
categories = ["development-tools", "command-line-utilities", "api-bindings"]
keywords = [
    "mcp",
    "terminal",
    "agent",
    "filesystem",
    "claude"
]

[dependencies]
kodegen_config = { version = "0.4" }
kodegen_mcp_schema = { version = "0.4" }
kodegen_mcp_tool = { version = "0.4" }

# Async runtime
tokio = { version = "1", features = ["full"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Synchronization primitives (for RwLock in usage_tracker)
parking_lot = "0.12"

# Date/time (for timestamps in usage_tracker)
chrono = { version = "0.4", features = ["serde"] }

# Cross-platform compatibility (for config paths)
dirs = "6"

# Lazy static initialization (for fuzzy logger singleton)
once_cell = "1"

# Unicode normalization (for char_analysis)
unicode-normalization = "0.1"

# LRU cache (for char_analysis)
lru = "0.16"

# Logging
log = "0.4"

[lib]
name = "kodegen_utils"
path = "src/lib.rs"
